--- a/index.html
+++ b/index.html
@@ -3,18 +3,66 @@
 
 <head>
   <meta charset="UTF-8" />
+  <!-- Primary Meta Tags -->
+  <title>Sifat Bhatia | Full Stack Developer & Designer</title>
+  <meta name="title" content="Sifat Bhatia | Full Stack Developer & Designer">
+  <meta name="description" content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences. Portfolio showcasing projects in React, JavaScript, and more.">
+  <meta name="keywords" content="Full Stack Developer, Web Designer, React Developer, JavaScript Expert, Portfolio, Web Development, UI/UX Design">
+  <meta name="author" content="Sifat Bhatia">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://siftion.com/">
+  <meta property="og:title" content="Sifat Bhatia | Full Stack Developer & Designer">
+  <meta property="og:description" content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
+  <meta property="og:image" content="/og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://siftion.com/">
+  <meta property="twitter:title" content="Sifat Bhatia | Full Stack Developer & Designer">
+  <meta property="twitter:description" content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
+  <meta property="twitter:image" content="/og-image.png">
+
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/src/styles.css" rel="stylesheet">
-  <!-- Add Modernizr -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="theme-color" content="#030a1f">
+  <link rel="canonical" href="https://siftion.com/">
+
+  <!-- Preload Assets -->
+  <link rel="preload" href="/logo.svg" as="image">
+  <link rel="preload" href="/src/styles.css" as="style">
+  <link rel="stylesheet" href="/src/styles.css">
+
+  <!-- Modernizr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/3.11.2/modernizr.min.js"></script>
 
-  <title>Sifat Bhatia</title>
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Sifat Bhatia",
+      "url": "https://siftion.com",
+      "jobTitle": "Full Stack Developer",
+      "description": "Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.",
+      "image": "/og-image.png",
+      "sameAs": [
+        "https://linkedin.com/in/siftion",
+        "https://github.com/sifatbhatia",
+        "https://x.com/siftion"
+    }
+  </script>
 </head>
 
 <body>
   <div id="root"></div>
+  <noscript>Please enable JavaScript to view this website.</noscript>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
