--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WJFRNZ86BX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WJFRNZ86BX');
+</script>
   <!-- Primary Meta Tags -->
   <title>Sifat Bhatia | Full Stack Developer & Designer</title>
   <meta name="title" content="Sifat Bhatia | Full Stack Developer & Designer">
