pixy mode experiment

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
   <!-- Preload Assets -->
   <link rel="preload" href="/logo.svg" as="image">
-  <link rel="preload" href="/src/styles.css" as="style">
-  <link rel="stylesheet" href="/src/styles.css">
+  <!-- <link rel="preload" href="/src/styles.css" as="style"> -->
+  <!-- <link rel="stylesheet" href="/src/styles.css"> -->
 
   <!-- Modernizr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/3.11.2/modernizr.min.js"></script>
