--- a/index.html
+++ b/index.html
@@ -3,50 +3,83 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WJFRNZ86BX"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJFRNZ86BX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-WJFRNZ86BX');
-</script>
+    gtag('config', 'G-WJFRNZ86BX');
+  </script>
   <!-- Primary Meta Tags -->
   <title>Sifat Bhatia | Full Stack Developer & Designer</title>
   <meta name="title" content="Sifat Bhatia | Full Stack Developer & Designer">
-  <meta name="description" content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences. Portfolio showcasing projects in React, JavaScript, and more.">
-  <meta name="keywords" content="Full Stack Developer, Web Designer, React Developer, JavaScript Expert, Portfolio, Web Development, UI/UX Design">
+  <meta name="description"
+    content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences. Portfolio showcasing projects in React, JavaScript, and more.">
+  <meta name="keywords"
+    content="Full Stack Developer, Web Designer, React Developer, JavaScript Expert, Portfolio, Web Development, UI/UX Design">
   <meta name="author" content="Sifat Bhatia">
   <meta name="robots" content="index, follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Sifat Bhatia",
+      "jobTitle": "Full Stack Developer",
+      "description": "Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.",
+      "image": "https://siftion.com/og-image.png",
+      "url": "https://siftion.com/",
+      "sameAs": [
+        "https://linkedin.com/in/sifatbhatia",
+        "https://github.com/sifatbhatia"
+      ]
+    }
+  </script>
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://siftion.com/">
   <meta property="og:title" content="Sifat Bhatia | Full Stack Developer & Designer">
-  <meta property="og:description" content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
-  <meta property="og:image" content="/og-image.png">
+  <meta property="og:description"
+    content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
+  <meta property="og:image" content="https://siftion.com/og-image.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://siftion.com/">
   <meta property="twitter:title" content="Sifat Bhatia | Full Stack Developer & Designer">
-  <meta property="twitter:description" content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
-  <meta property="twitter:image" content="/og-image.png">
+  <meta property="twitter:description"
+    content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
+  <meta property="twitter:image" content="https://siftion.com/og-image.png">
+  <meta property="twitter:image:width" content="1200">
+  <meta property="twitter:image:height" content="630">
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://siftion.com/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://siftion.com/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://siftion.com/favicon-16x16.png">
+  <link rel="manifest" href="https://siftion.com/site.webmanifest">
   <meta name="theme-color" content="#030a1f">
   <link rel="canonical" href="https://siftion.com/">
 
   <!-- Preload Assets -->
-  <link rel="preload" href="/logo.svg" as="image">
-  <!-- <link rel="preload" href="/src/styles.css" as="style"> -->
-  <!-- <link rel="stylesheet" href="/src/styles.css"> -->
+  <link rel="preload" href="https://siftion.com/logo.svg" as="image">
+
+  <!-- Google Analytics -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJFRNZ86BX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-WJFRNZ86BX');
+  </script>
 
   <!-- Modernizr -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/3.11.2/modernizr.min.js"></script>
