fixes to the pixy mode

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   <meta property="twitter:title" content="Sifat Bhatia | Full Stack Developer & Designer">
   <meta property="twitter:description"
     content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
-  <meta property="twitter:image" content="https://siftion.com/og-image.png">
+  <meta property="twitter:image" content="https://siftion.com/webp/og-image.webp">
   <meta property="twitter:image:width" content="1200">
-  <meta property="twitter:image:height" content="630">
+  <meta property="twitter:image:height" content="630">  
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://siftion.com/apple-touch-icon.png">
