--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <meta property="og:title" content="Sifat Bhatia | Full Stack Developer & Designer">
   <meta property="og:description"
     content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
-  <meta property="og:image" content="https://siftion.com/webp/og-image.webp">
+  <meta property="og:image" content="https://siftion.com/og-image.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
