--- a/index.html
+++ b/index.html
@@ -5,102 +5,73 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJFRNZ86BX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
 
-    gtag('config', 'G-WJFRNZ86BX');
-  </script>
-  <!-- Primary Meta Tags -->
-  <title>Sifat Bhatia | Full Stack Developer & Designer</title>
-  <meta name="title" content="Sifat Bhatia | Full Stack Developer & Designer">
+  <!-- Primary Meta -->
+  <title>Sifat Bhatia | Full‑Stack Developer & Designer</title>
   <meta name="description"
-    content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences. Portfolio showcasing projects in React, JavaScript, and more.">
+        content="Full‑stack developer crafting modern web apps, immersive interfaces, and seamless user experiences." />
   <meta name="keywords"
-    content="Full Stack Developer, Web Designer, React Developer, JavaScript Expert, Portfolio, Web Development, UI/UX Design">
-  <meta name="author" content="Sifat Bhatia">
-  <meta name="robots" content="index, follow">
+        content="Full‑stack developer, web designer, React, JavaScript, portfolio, UI/UX" />
+  <meta name="author" content="Sifat Bhatia" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://siftion.com/" />
 
-  <!-- Structured Data -->
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Sifat Bhatia",
-      "jobTitle": "Full Stack Developer",
-      "description": "Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.",
-      "image": "https://siftion.com/og-image.png",
-      "url": "https://siftion.com/",
-      "sameAs": [
-        "https://linkedin.com/in/sifatbhatia",
-        "https://github.com/sifatbhatia"
-      ]
-    }
-  </script>
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://siftion.com/">
-  <meta property="og:title" content="Sifat Bhatia | Full Stack Developer & Designer">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://siftion.com/" />
+  <meta property="og:title" content="Sifat Bhatia | Full‑Stack Developer & Designer" />
   <meta property="og:description"
-    content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
-  <meta property="og:image" content="https://siftion.com/og-image.png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+        content="Full‑stack developer crafting modern web apps, immersive interfaces, and seamless user experiences." />
+  <meta property="og:image" content="https://siftion.com/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://siftion.com/">
-  <meta property="twitter:title" content="Sifat Bhatia | Full Stack Developer & Designer">
-  <meta property="twitter:description"
-    content="Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.">
-  <meta property="twitter:image" content="https://siftion.com/webp/og-image.webp">
-  <meta property="twitter:image:width" content="1200">
-  <meta property="twitter:image:height" content="630">  
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://siftion.com/" />
+  <meta name="twitter:title" content="Sifat Bhatia | Full‑Stack Developer & Designer" />
+  <meta name="twitter:description"
+        content="Full‑stack developer crafting modern web apps, immersive interfaces, and seamless user experiences." />
+  <meta name="twitter:image" content="https://siftion.com/og-image.png" />
 
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://siftion.com/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://siftion.com/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://siftion.com/favicon-16x16.png">
-  <link rel="manifest" href="https://siftion.com/site.webmanifest">
-  <meta name="theme-color" content="#030a1f">
-  <link rel="canonical" href="https://siftion.com/">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://siftion.com/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://siftion.com/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="https://siftion.com/favicon-16x16.png" />
+  <link rel="manifest" href="https://siftion.com/site.webmanifest" />
+  <meta name="theme-color" content="#030a1f" />
 
-  <!-- Preload Assets -->
-  <link rel="preload" href="https://siftion.com/logo.svg" as="image">
+  <!-- Preload logo -->
+  <link rel="preload" href="https://siftion.com/logo.svg" as="image" />
 
-  <!-- Google Analytics -->
-  <!-- Google tag (gtag.js) -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-WJFRNZ86BX"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-WJFRNZ86BX');
   </script>
 
-  <!-- Modernizr -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/3.11.2/modernizr.min.js"></script>
-
-  <!-- Structured Data -->
+  <!-- Structured Data (single, merged) -->
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Sifat Bhatia",
-      "url": "https://siftion.com",
-      "jobTitle": "Full Stack Developer",
-      "description": "Full Stack Developer specializing in modern web applications, creative design solutions, and seamless user experiences.",
-      "image": "/og-image.png",
-      "sameAs": [
-        "https://linkedin.com/in/siftion",
-        "https://github.com/sifatbhatia",
-        "https://x.com/siftion"
-    }
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Sifat Bhatia",
+    "jobTitle": "Full‑Stack Developer & Designer",
+    "description": "Full‑stack developer crafting modern web apps, immersive interfaces, and seamless user experiences.",
+    "image": "https://siftion.com/og-image.png",
+    "url": "https://siftion.com/",
+    "sameAs": [
+      "https://www.linkedin.com/in/siftion",
+      "https://github.com/sifatbhatia",
+      "https://x.com/siftion"
+    ]
+  }
   </script>
 </head>
+
 
 <body>
   <div id="root"></div>
